[metadata]
name = Task-6-Report-of-Monaco-2018-Racing
version = 0.0.2
author = Anton Viazovik
author_email = Loukik56@mail.ru
description = This package processes driver statistics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.foxminded.com.ua/Anton1/report-of-monaco-2018-racing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src